// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Inspiration - 'populære' should sort before 'nyeste' in 'fiction' 1`] = `
{
  "data": {
    "inspiration": {
      "categories": [
        {
          "subCategories": [
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:52557240",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:06162533",
                  },
                },
              ],
              "title": "populære",
            },
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - Empty subCategories array returns all subCategories in 'fiction' 1`] = `
{
  "data": {
    "inspiration": {
      "categories": [
        {
          "subCategories": [
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:52557240",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:06162533",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - get both 'nyeste' and 'populære' in 'fiction' and 'games' 1`] = `
{
  "data": {
    "inspiration": {
      "categories": [
        {
          "subCategories": [
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:52557240",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:06162533",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
        {
          "subCategories": [
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:61629475",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:62413344",
                  },
                },
              ],
              "title": "nyeste",
            },
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:45938247",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:28505000",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "games",
          "type": "GAMES",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - no categories returned when filters prop is empty 1`] = `
{
  "data": {
    "inspiration": {
      "categories": [],
    },
  },
}
`;

exports[`Inspiration - no categories returned when filters prop is missing 1`] = `
{
  "data": {
    "inspiration": {
      "categories": [],
    },
  },
}
`;

exports[`Inspiration - no subCategories prop returns all subCategories in 'games' 1`] = `
{
  "data": {
    "inspiration": {
      "categories": [
        {
          "subCategories": [
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:61629475",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:62413344",
                  },
                },
              ],
              "title": "nyeste",
            },
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:45938247",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:28505000",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "games",
          "type": "GAMES",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - only get 'nyeste' in 'fiction' 1`] = `
{
  "data": {
    "inspiration": {
      "categories": [
        {
          "subCategories": [
            {
              "result": [
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                {
                  "work": {
                    "titles": {
                      "main": [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
      ],
    },
  },
}
`;
